fix: CreatePullRequestDialog make branch loading UI updates EDT-safe